# dendy2usb

./: CMakeLists.txt  build.sh
board/: board-cache.lib  board-rescue.lib  board.dsn  board.kicad_pcb  board.pro  board.sch
src/: Descriptors.c  Descriptors.h  gamepad.c  nessmd2usb.c
